Make pluggable bits use <packaging>bundle</packaging> Added @Named on ext components

--- a/gshell-commands/gshell-logging/pom.xml
+++ b/gshell-commands/gshell-logging/pom.xml
@@ -27,7 +27,8 @@
 
     <artifactId>gshell-logging</artifactId>
     <name>GShell Commands :: Logging</name>
-    
+    <packaging>bundle</packaging>
+
     <profiles>
         <profile>
             <id>assembly</id>
