--- a/gshell-commands/gshell-pref/pom.xml
+++ b/gshell-commands/gshell-pref/pom.xml
@@ -27,7 +27,8 @@
 
     <artifactId>gshell-pref</artifactId>
     <name>GShell Commands :: Preferences</name>
-    
+    <packaging>bundle</packaging>
+
     <profiles>
         <profile>
             <id>assembly</id>
