--- a/gshell-commands/gshell-standard/pom.xml
+++ b/gshell-commands/gshell-standard/pom.xml
@@ -27,6 +27,7 @@
 
     <artifactId>gshell-standard</artifactId>
     <name>GShell Commands :: Standard</name>
+    <packaging>bundle</packaging>
 
     <dependencies>
         <dependency>
