--- a/gshell-gossip/pom.xml
+++ b/gshell-gossip/pom.xml
@@ -27,6 +27,7 @@
 
     <artifactId>gshell-gossip</artifactId>
     <name>GShell :: Gossip</name>
+    <packaging>bundle</packaging>
 
     <dependencies>
         <dependency>
