--- a/gshell-personality/pom.xml
+++ b/gshell-personality/pom.xml
@@ -27,6 +27,7 @@
 
     <artifactId>gshell-personality</artifactId>
     <name>GShell :: Personality</name>
+    <packaging>bundle</packaging>
 
     <dependencies>
         <dependency>
