--- a/gshell-commands/gshell-file/pom.xml
+++ b/gshell-commands/gshell-file/pom.xml
@@ -27,7 +27,8 @@
 
     <artifactId>gshell-file</artifactId>
     <name>GShell Commands :: File</name>
-    
+    <packaging>bundle</packaging>
+
     <profiles>
         <profile>
             <id>assembly</id>
