--- a/gshell-commands/pom.xml
+++ b/gshell-commands/pom.xml
@@ -141,6 +141,7 @@
         <module>gshell-network</module>
         <!--<module>gshell-shell</module>-->
         <module>gshell-file</module>
+        <module>gshell-jmx</module>
         <!--<module>gshell-admin</module>-->
         <!--<module>gshell-vfs</module>-->
         <!--<module>gshell-ssh</module>-->
