--- a/gshell-commands/pom.xml
+++ b/gshell-commands/pom.xml
@@ -28,6 +28,7 @@
 
     <groupId>org.sonatype.gshell.commands</groupId>
     <artifactId>gshell-commands</artifactId>
+    <version>2.6.5.1-SNAPSHOT</version>
     <name>GShell Commands</name>
     <packaging>pom</packaging>
     
@@ -68,7 +69,13 @@
                 <artifactId>gshell-file</artifactId>
                 <version>2.6.5-SNAPSHOT</version>
             </dependency>
-            
+          
+            <dependency>
+                <groupId>org.sonatype.gshell.commands</groupId>
+                <artifactId>gshell-jmx</artifactId>
+                <version>2.6.5.1-SNAPSHOT</version>
+            </dependency>
+
             <!--<dependency>-->
                 <!--<groupId>org.sonatype.gshell.commands</groupId>-->
                 <!--<artifactId>gshell-text</artifactId>-->
@@ -123,11 +130,13 @@
         <dependency>
             <groupId>org.sonatype.gshell</groupId>
             <artifactId>gshell-core</artifactId>
+            <version>2.6.5.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.sonatype.gshell</groupId>
             <artifactId>gshell-core</artifactId>
+            <version>2.6.5.1-SNAPSHOT</version>
             <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
