--- a/gshell-core/pom.xml
+++ b/gshell-core/pom.xml
@@ -27,6 +27,7 @@
     </parent>
 
     <artifactId>gshell-core</artifactId>
+    <version>2.6.5.1-SNAPSHOT</version>
     <name>GShell :: Core</name>
 
     <dependencies>
@@ -38,6 +39,7 @@
         <dependency>
             <groupId>org.sonatype.gshell</groupId>
             <artifactId>gshell-util</artifactId>
+            <version>2.6.5.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
