changed variable name

--- a/gshell-commands/gshell-jmx/src/main/resources/org/sonatype/gshell/commands/jmx/MBeanCommand.properties
+++ b/gshell-commands/gshell-jmx/src/main/resources/org/sonatype/gshell/commands/jmx/MBeanCommand.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-command.description=Connect to MBean.
+command.description=Connect to JMX MBean.
 
 command.argument.name=JMX ObjectName of MBean to connect to.
 command.argument.name.token=OBJECT_NAME
