--- a/gshell-commands/pom.xml
+++ b/gshell-commands/pom.xml
@@ -26,7 +26,7 @@
         <version>2.6.5-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.sonatype.gshell.commands</groupId>
+    <groupId>org.brylex.gshell.commands</groupId>
     <artifactId>gshell-commands</artifactId>
     <version>2.6.5.1-SNAPSHOT</version>
     <name>GShell Commands</name>
@@ -69,11 +69,11 @@
                 <artifactId>gshell-file</artifactId>
                 <version>2.6.5-SNAPSHOT</version>
             </dependency>
-          
+
             <dependency>
-                <groupId>org.sonatype.gshell.commands</groupId>
+                <groupId>org.brylex.gshell.commands</groupId>
                 <artifactId>gshell-jmx</artifactId>
-                <version>2.6.5.1-SNAPSHOT</version>
+                <version>${project.version}</version>
             </dependency>
 
             <!--<dependency>-->
@@ -125,22 +125,6 @@
             <!--</dependency>-->
         </dependencies>
     </dependencyManagement>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.sonatype.gshell</groupId>
-            <artifactId>gshell-core</artifactId>
-            <version>2.6.5.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.sonatype.gshell</groupId>
-            <artifactId>gshell-core</artifactId>
-            <version>2.6.5.1-SNAPSHOT</version>
-            <classifier>tests</classifier>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 
     <modules>
         <module>gshell-standard</module>
